--- a/sar/android/app/src/main/AndroidManifest.xml
+++ b/sar/android/app/src/main/AndroidManifest.xml
@@ -40,5 +40,6 @@
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
 
 </manifest>
