Revert "adaptive appicon"
This reverts commit c4a3a9b9c2def8bd3511e58e0e049db2f79d74da.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,8 @@ dev_dependencies:
 
 flutter_icons:
   android: "launcher_icon"
-  ios: true
-  image_path: "assets/icon/icon.png"
-  adaptive_icon_foreground: "assets/icon/icon_foreground.png"
-  adaptive_icon_background: "#ff253185"
+  ios: false
+  image_path: "assets/icon.png"
 # Command um Launcher Icon zu generieren: flutter pub run flutter_launcher_icons:main
 
 
@@ -41,7 +39,6 @@ flutter:
     - assets/images/
     - assets/texts/
     - assets/texts/informationen/
-    - assets/icon/
 
   # fonts:
   #   - family: Schyler
