added debug symbols

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,6 +64,10 @@ android {
             applicationIdSuffix ".debug"
         }
     }
+
+    ndk {
+        debugSymbolLevel 'FULL'
+    }
 }
 
 flutter {
