--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,3 +73,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+android.buildTypes.release.ndk.debugSymbolLevel = "FULL"
