--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,22 +8,18 @@ version: 1.3.0+2 # Hier Version der App ändern
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
-
 dependencies:
   flutter:
     sdk: flutter
-
-  flutter_launcher_icons: ^0.9.0 # Launcher Icons
-  url_launcher: ^6.0.2 # URLs im Browser öffnen
-  package_info: ^2.0.0 # Version in der App erhalten
-  cached_network_image: ^3.0.0 # Video Thumbnails cachen
   animations: ^2.0.0
+  cached_network_image: ^3.0.0
+  flutter_launcher_icons: ^0.9.0
   flutter_markdown: ^0.6.2
+  package_info: ^2.0.0
+  url_launcher: ^6.0.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
+  lint: ^1.5.3
 
 flutter_icons:
   android: "launcher_icon"
@@ -32,8 +28,6 @@ flutter_icons:
   adaptive_icon_foreground: "assets/icon/icon_foreground.png"
   adaptive_icon_background: "#ff253185"
 # Command um Launcher Icon zu generieren: flutter pub run flutter_launcher_icons:main
-
-
 flutter:
   uses-material-design: true
 
@@ -42,7 +36,6 @@ flutter:
     - assets/texts/
     - assets/texts/informationen/
     - assets/icon/
-
   # fonts:
   #   - family: Schyler
   #     fonts:
