--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Schulbroschüren App der Schule am Ried
 
 publish_to: 'none' # Do not remove!
 
-version: 1.3.0+2 # Hier Version der App ändern
+version: 1.4.0+3 # Hier Version der App ändern (die Zahl nach dem + bei jeder Versionsänderung um 1 erhöhen)
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
