--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   package_info: ^2.0.0
   url_launcher: ^6.0.2
 
-dev_dependencies:
+dev_dependencies: 
+  flutter_lints: ^1.0.4
 
 flutter_icons:
   android: "launcher_icon"
