--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_markdown: ^0.6.2
   package_info: ^2.0.0
   url_launcher: ^6.0.2
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies: 
   flutter_lints: ^1.0.4
